--- a/haskell-tutorial.cabal
+++ b/haskell-tutorial.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4ab5a75bd2d37694a2623f2c15a6f51257aebb3cfc57ad2311c6a4b4c6c4ed2e
+-- hash: 29fe70a31fb261688c9aa3594ed4b7d388a094c1196cf0e8cf896755b6cdc860
 
 name:           haskell-tutorial
 version:        0.1.0.0
@@ -27,13 +27,22 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      HTML
+      ServerMain
+      TaskDB
   other-modules:
       Paths_haskell_tutorial
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , hasql
+    , http-types
+    , text
+    , utf8-string
+    , wai
+    , warp
   default-language: Haskell2010
 
 executable haskell-tutorial-exe
@@ -45,7 +54,14 @@ executable haskell-tutorial-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , haskell-tutorial
+    , hasql
+    , http-types
+    , text
+    , utf8-string
+    , wai
+    , warp
   default-language: Haskell2010
 
 test-suite haskell-tutorial-test
@@ -58,5 +74,12 @@ test-suite haskell-tutorial-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , haskell-tutorial
+    , hasql
+    , http-types
+    , text
+    , utf8-string
+    , wai
+    , warp
   default-language: Haskell2010
