--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,14 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- warp
+- wai
+- http-types
+- utf8-string
+- hasql
+- text
+- bytestring
+
 
 library:
   source-dirs: src
